# FOSDEM2018-arithmetic

./: CMakeLists.txt  conanfile.py
src/: add.cpp
usingproject/: CMakeLists.txt  conanfile.txt  process.sh
usingproject/build2/: conanbuildinfo.txt  conaninfo.txt
usingproject/src/: main.cpp
